Make NetMQ config appsettings.json-driven

--- a/ClientApp/appsettings.json
+++ b/ClientApp/appsettings.json
@@ -31,14 +31,14 @@
           "DevAddr": "0x26011BDE",
           "NwkSKey": "0x4D3CFA0199AB225D110088556ACCFF03",
           "AppSKey": "0x2B7E151628AED2A6ABF7158809CF4F3C",
-          "Duration": "32",
+          "Duration": 32,
           "IntervalSeconds": 2000
         },
         {
           "DevAddr": "0x26011BDF",
           "NwkSKey": "0x00112233445566778899AABBCCDDEEFF",
           "AppSKey": "0xAABBCCDDEEFF00112233445566778899",
-          "Duration": "55",
+          "Duration": 55,
           "IntervalSeconds": 5000
         }
       ]
@@ -47,6 +47,13 @@
       "ConnectaIoT" : [
         62715, 62709, 62703, 62695, 60524, 60522, 60475, 60472
       ]
+    },
+    "NetMQ": {
+      "Address": {
+        "Ip": "tcp://127.0.0.1",
+        "Port": "5556"
+      },
+      "Topic": "D2S"
     }
   }
   
