Added logging, and improved Console input validation

--- a/ServerApp/appsettings.json
+++ b/ServerApp/appsettings.json
@@ -1,7 +1,7 @@
 {
     "NetMQ": {
       "Address": {
-        "Ip": "tcp://127.0.0.1",
+        "Ip": "tcp://*",
         "Port": "5556"
       },
       "Topic": "D2S"
