--- a/ClientApp/LoRaWanSim.csproj
+++ b/ClientApp/LoRaWanSim.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.6" />
     <PackageReference Include="NetMQ" Version="4.0.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="System.Formats.Cbor" Version="9.0.6" />
   </ItemGroup>
 
