Make Logger config appsettings.json-driven

--- a/ClientApp/appsettings.json
+++ b/ClientApp/appsettings.json
@@ -54,6 +54,21 @@
         "Port": "5556"
       },
       "Topic": "D2S"
+    },
+    "Serilog": {
+      "MinimumLevel": "Debug",
+      "WriteTo":[
+        {
+          "Name": "File",
+          "Args": {
+            "path": "logs/log.txt",
+            "rollingInterval": "Day"
+          }
+        },
+        {
+          "Name": "Console"
+        }
+      ]
     }
   }
   
