--- a/ClientApp/LoRaWanSim.csproj
+++ b/ClientApp/LoRaWanSim.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="NetMQ" Version="4.0.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="System.Formats.Cbor" Version="9.0.6" />
