--- a/ClientApp/appsettings.json
+++ b/ClientApp/appsettings.json
@@ -1,74 +1,75 @@
 {
-    "DeviceSources": {
-      "ByPacketSize": [
-        {
-          "DevAddr": "0x26011BDA",
-          "NwkSKey": "0x4D3CFA0199AB225D110088556ACCFF03",
-          "AppSKey": "0x2B7E151628AED2A6ABF7158809CF4F3C",
-          "PacketSize": 15
-        },
-        {
-          "DevAddr": "0x26011BDB",
-          "NwkSKey": "0x00112233445566778899AABBCCDDEEFF",
-          "AppSKey": "0xAABBCCDDEEFF00112233445566778899",
-          "PacketSize": 10
-        },
-        {
-          "DevAddr": "0x26011BDC",
-          "NwkSKey": "0xAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-          "AppSKey": "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
-          "PacketSize": 7
-        },
-        {
-          "DevAddr": "0x26011BDD",
-          "NwkSKey": "0x1234567890ABCDEF1234567890ABCDEF",
-          "AppSKey": "0xFEDCBA0987654321FEDCBA0987654321",
-          "PacketSize": 12
-        }
-      ],
-      "ByDuration": [
-        {
-          "DevAddr": "0x26011BDE",
-          "NwkSKey": "0x4D3CFA0199AB225D110088556ACCFF03",
-          "AppSKey": "0x2B7E151628AED2A6ABF7158809CF4F3C",
-          "Duration": 32,
-          "IntervalSeconds": 2000
-        },
-        {
-          "DevAddr": "0x26011BDF",
-          "NwkSKey": "0x00112233445566778899AABBCCDDEEFF",
-          "AppSKey": "0xAABBCCDDEEFF00112233445566778899",
-          "Duration": 55,
-          "IntervalSeconds": 5000
-        }
-      ]
-    },
-    "SatelliteIds": {
-      "ConnectaIoT" : [
-        62715, 62709, 62703, 62695, 60524, 60522, 60475, 60472
-      ]
-    },
-    "NetMQ": {
-      "Address": {
-        "Ip": "tcp://127.0.0.1",
-        "Port": "5556"
+  "DeviceSources": {
+    "ByPacketSize": [
+      {
+        "DevAddr": "0x26011BDA",
+        "NwkSKey": "0x4D3CFA0199AB225D110088556ACCFF03",
+        "AppSKey": "0x2B7E151628AED2A6ABF7158809CF4F3C",
+        "PacketSize": 15
       },
-      "Topic": "D2S"
+      {
+        "DevAddr": "0x26011BDB",
+        "NwkSKey": "0x00112233445566778899AABBCCDDEEFF",
+        "AppSKey": "0xAABBCCDDEEFF00112233445566778899",
+        "PacketSize": 10
+      },
+      {
+        "DevAddr": "0x26011BDC",
+        "NwkSKey": "0xAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
+        "AppSKey": "0xBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
+        "PacketSize": 7
+      },
+      {
+        "DevAddr": "0x26011BDD",
+        "NwkSKey": "0x1234567890ABCDEF1234567890ABCDEF",
+        "AppSKey": "0xFEDCBA0987654321FEDCBA0987654321",
+        "PacketSize": 12
+      }
+    ],
+    "ByDuration": [
+      {
+        "DevAddr": "0x26011BDE",
+        "NwkSKey": "0x4D3CFA0199AB225D110088556ACCFF03",
+        "AppSKey": "0x2B7E151628AED2A6ABF7158809CF4F3C",
+        "Duration": 32,
+        "IntervalSeconds": 2000
+      },
+      {
+        "DevAddr": "0x26011BDF",
+        "NwkSKey": "0x00112233445566778899AABBCCDDEEFF",
+        "AppSKey": "0xAABBCCDDEEFF00112233445566778899",
+        "Duration": 55,
+        "IntervalSeconds": 5000
+      }
+    ]
+  },
+  "SatelliteIds": {
+    "ConnectaIoT" : [
+      62715, 62709, 62703, 62695, 60524, 60522, 60475, 60472
+    ]
+  },
+  "NetMQ": {
+    "Address": {
+      "Ip": "tcp://127.0.0.1",
+      "Port": "5556"
     },
-    "Serilog": {
-      "MinimumLevel": "Debug",
-      "WriteTo":[
-        {
-          "Name": "File",
-          "Args": {
-            "path": "logs/log.txt",
-            "rollingInterval": "Day"
-          }
-        },
-        {
-          "Name": "Console"
+    "Topic": "D2S"
+  },
+  "Serilog": {
+    "MinimumLevel": "Debug",
+    "WriteTo":[
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log.txt",
+          "rollingInterval": "Day"
         }
-      ]
-    }
-  }
+      },
+      {
+        "Name": "Console"
+      }
+    ]
+  },
+  "IsInteractive" : false
+}
   
