AppData randomization changed

--- a/ClientApp/LoRaWanSim.csproj
+++ b/ClientApp/LoRaWanSim.csproj
@@ -18,6 +18,10 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="System.Formats.Cbor" Version="9.0.6" />
+
+    <None Update = "appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
